# cartograph

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  PROJECT.toml  README.md  extension.toml  pyproject.toml
docs/: architecture.md  building.md  learning-design.md
gui/imgui/: CMakeLists.txt
gui/imgui/include/cartograph/: app.h
gui/imgui/src/: db_reader.cpp  graph_panel.cpp  main.cpp  query_panel.cpp  sql_inspector.cpp  xref_explorer.cpp
gui/swift/: project.yml
gui/swift/Cartograph/Resources/Shared/: Info.plist
gui/swift/Cartograph/Resources/iOS/: Info.plist
gui/swift/Cartograph/Sources/Data/: CartographDB.swift
gui/swift/Cartograph/Sources/Data/Models/: PathStepRecord.swift  ReadingPathRecord.swift  SessionRecord.swift  SymbolRecord.swift  XrefRecord.swift
gui/swift/Cartograph/Sources/Data/Queries/: GraphQueries.swift  SessionWriteQueries.swift  SymbolQueries.swift
gui/swift/Cartograph/Sources/Services/: BridgeSourceProvider.swift  ExplainService.swift  GeminiService.swift  GitHubSourceProvider.swift  GiteaSourceProvider.swift  IntelligenceSettings.swift  LLMFactory.swift  LLMTypes.swift  LocalLLMService.swift  LocalSourceProvider.swift  SourceProvider.swift  SourceProviderSettings.swift  SpacedRepetitionService.swift
gui/swift/Cartograph/Sources/Shared/: CartographApp.swift  ContentView.swift  NavigationTypes.swift  Theme.swift
gui/swift/Cartograph/Sources/Views/Browser/: SymbolBrowserView.swift
gui/swift/Cartograph/Sources/Views/CodeViewer/: CodeViewerView.swift  SyntaxTokenizer.swift
gui/swift/Cartograph/Sources/Views/Dashboard/: DashboardView.swift  SessionResumeCard.swift
gui/swift/Cartograph/Sources/Views/Explain/: ExplainPanelView.swift  LevelSelector.swift
gui/swift/Cartograph/Sources/Views/Focus/: FocusTimerView.swift  MicroRewardView.swift  QuickNoteSheet.swift
gui/swift/Cartograph/Sources/iOS/: CartographApp_iOS.swift  ProjectLibraryView.swift  iOSCodeViewerView.swift  iOSContentView.swift  iOSPathView.swift  iOSSymbolBrowserView.swift  iOSWelcomeView.swift
gui/swift/Cartograph/Tests/: CartographDBTests.swift
src/cartograph/: __init__.py  __main__.py  explain.py  graph.py  ingest.py  mcp_tools.py  models.py  parser.py  paths.py  resolver.py  serve.py  session.py  storage.py
src/cartograph/cli/: __init__.py
tests/: test_graph.py  test_ingest.py  test_parser.py  test_paths.py  test_session.py  test_storage.py
tests/fixtures/sample_python/: main.py  utils.py
(+7 files in other folders)
